Remove deleted files from the repository

--- a/templates/fountainchurch/about_us.html
+++ b/templates/fountainchurch/about_us.html
@@ -93,9 +93,11 @@
                         <div class="col-sm-10">
                             <p class="mb-0"style="font-family: 'serif';"><i class="fa fa-arrow-right text-primary me-2"></i> Sunday Service: 9:00 AM - 11: AM</p>
                         </div>
-                       
                         <div class="col-sm-10">
                             <p class="mb-0"style="font-family: 'serif';"><i class="fa fa-arrow-right text-primary me-2"></i>Wednesday Bible Study: 6:30 PM - 8:30 PM </p>
+                        </div>
+                        <div class="col-sm-10">
+                            <p class="mb-0"style="font-family: 'serif';"><i class="fa fa-arrow-right text-primary me-2"></i> Monday Prayer Meeting: 6:30 PM - 8:00 PM</p>
                         </div>
                     </div>
                     <a class="btn btn-primary py-3 px-5 mt-2"style="border-radius: 15px;font-family: 'serif';" href="{% url 'contact' %}">Contact Us</a>
