Remove deleted files from the repository

--- a/templates/fountainchurch/home.html
+++ b/templates/fountainchurch/home.html
@@ -41,7 +41,7 @@
                             equips you for life. Whether you're searching for answers, 
                             growing in faith, or looking for a spiritual home, know that <b>you are 
                             not here by accident</b>—God has a purpose for your life, and we would 
-                            love to walk alongside you on your journey. Welcome home, <b>Pastor Tunde Fasoranti.</b>
+                            love to walk alongside you on your journey. Welcome home! <br><br><b>Snr Pastor Tunde Fasoranti.</b></br>
                         </p>
                     </div>
                 </div>
