--- a/static/css/style.css
+++ b/static/css/style.css
@@ -281,6 +281,20 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
     transition: .5s;
 }
 
+video {
+    width: 100%;
+    height: auto;  /* This ensures the aspect ratio of the video remains intact */
+    object-fit: cover; /* Ensures the video covers the full container area without distortion */
+}
+
+
+@media (max-width:68px) {
+    #video {
+        height: 240px; /* Adjust the height for mobile */
+        object-fit: contain; /* Ensure the whole video is visible */
+    }
+}
+
 .service-item:hover * {
     color: var(--light) !important;
 }
