--- a/templates/fountainchurch/home.html
+++ b/templates/fountainchurch/home.html
@@ -9,11 +9,14 @@
        
             <!-- Video with Italian-style elegance -->
 
-            <video autoplay muted playsinline loop controls 
-            style="object-fit: cover; width: 100%; height: 100vh;">
-         <source src="{{ first_image.fountain_church_video.url }}" type="video/mp4">
-         Your browser does not support the video tag.
-     </video>
+
+   
+        <video autoplay muted playsinline loop width="100%" height="400"controls id="video"
+            style="width: 100%; height: 100vh; object-fit:cover;">
+            <source src="{{ first_image.fountain_church_video.url }}" type="video/mp4">
+            <source src="{{ first_image.fountain_church_video.url }}" type="video/webm">
+            Your browser does not support the video tag.
+        </video>
      
 
 
