--- a/templates/fountainchurch/events.html
+++ b/templates/fountainchurch/events.html
@@ -30,7 +30,7 @@
                     <div class="service-item text-center pt-3">
                         <div class="p-4">
                             <i class="fa fa-3x fa-church text-danger mb-4"></i>
-                            <h5 class="mb-3style="font-family: 'serif';"">Sunday Service</h5>
+                            <h5 class="mb-3"style="font-family: 'serif';color: #d4af37;">Sunday Service</h5>
                             <p style="font-family: 'serif';">Sunday School: 8:00 AM - 9:00 AM</p>
                             <p style="font-family: 'serif';">Sunday Service: 9:00 AM - 11: AM</p>
                         </div>
@@ -40,7 +40,7 @@
                     <div class="service-item text-center pt-3">
                         <div class="p-4"> 
                             <i class="fa fa-3x fa-church text-danger mb-4"></i>
-                            <h5 class="mb-3"style="font-family: 'serif';">Monday Service</h5>
+                            <h5 class="mb-3"style="font-family: 'serif';color: #d4af37;">Monday Service</h5>
                             <p style="font-family: 'serif';">Monday Prayer Meeting: 6:00 PM - 8:00 PM</p>
                         </div>
                     </div>
@@ -49,7 +49,7 @@
                     <div class="service-item text-center pt-3">
                         <div class="p-4">
                             <i class="fa fa-3x fa-church text-danger mb-4"></i>
-                            <h5 class="mb-3"style="font-family: 'serif';">Wednesday Service</h5>
+                            <h5 class="mb-3"style="font-family: 'serif';color: #d4af37;">Wednesday Service</h5>
                             <p style="font-family: 'serif';">Wednesday Bible Study: 6:00 PM - 8:30 PM</p>
                         </div>
                     </div>
