--- a/static/css/style.css
+++ b/static/css/style.css
@@ -281,20 +281,44 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
     transition: .5s;
 }
 
+
+/* Default styling */
 video {
     width: 100%;
-    height: auto;  /* This ensures the aspect ratio of the video remains intact */
-    object-fit: cover; /* Ensures the video covers the full container area without distortion */
-}
-
-
-@media (max-width:768px) {
-    #video {
-        height: 150px; /* Adjust the height for mobile */
-        object-fit: cover; /* Ensure the whole video is visible */
-        width: 200px;
+    height: 150vh;  /* Full viewport height */
+    object-fit: cover;
+  }
+  
+  /* Mobile responsiveness */
+  @media (max-width: 768px) {
+    video {
+      height: 50vh;  /* Adjust height for smaller screens (e.g., mobile devices) */
     }
+  }
+
+
+/* Default styling for larger screens */
+.w-100 {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin-bottom: 1rem; /* Small margin from the bottom */
 }
+
+/* Media Query for small devices (max-width: 768px) */
+@media (max-width: 768px) {
+  .w-100 {
+    position: relative;  /* Change to relative positioning for mobile */
+    margin-bottom: 2rem;  /* Move the buttons up from the bottom */
+  }
+
+  .w-100 a {
+    font-size: 12px;  /* Adjust font size for smaller screens */
+  }
+}
+
+  
 
 .service-item:hover * {
     color: var(--light) !important;
