The audio sermons is completed

--- a/templates/fountainchurch/sermons.html
+++ b/templates/fountainchurch/sermons.html
@@ -51,7 +51,7 @@
                         <div class="d-flex border-top">
                             <small class="flex-fill text-center border-end py-2"><i class="fa fa-clock text-primary me-2"style="font-family: 'serif';"></i>By:{{ post.sermons_preach_by }}</small>
                            
-                            <a href="{% url 'sermons_detail' post.pk %}" class="flex-shrink-0 btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;font-family: 'serif';">{{ post.sermons_publish_date }}</a>
+                            <a href="{% url 'sermons_detail' post.pk %}" class="flex-shrink-0 btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;font-family: 'serif';">{{ post.Sermons_time }}</a>
                         </div>
                     </div>
                 </div>
