--- a/templates/fountainchurch/audio_sermons.html
+++ b/templates/fountainchurch/audio_sermons.html
@@ -41,13 +41,13 @@
                                 </audio>
                             </a>
                         </div>
-                        
+
                         <div class="text-center p-4 pb-0">
                             <p class="mb-4"style="font-family: 'serif';">{{ post.audio_sermons_title|truncatechars:40 }}</p>
                         </div>
                         <div class="d-flex border-top">
                             <small class="flex-fill text-center border-end py-2"><i class="fa fa-clock text-primary me-2"></i>By:{{ post.audio_sermons_preach_by }}</small>
-                            <a style="font-family: 'serif';"href="{%  url 'audio_sermons_detail' post.pk %}" class="flex-shrink-0 btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">{{ post.audio_sermons_publish_date }}</a>
+                            <a style="font-family: 'serif';"href="{%  url 'audio_sermons_detail' post.pk %}" class="flex-shrink-0 btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">{{ post.audio_Sermons_time }}</a>
                         </div>
                     </div>
                 </div>
